--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ nav ul.menu li img {height: 25px; width: 25px;}
 .BUTTON {padding-bottom: 5px;}
 @media (max-width: 950px) 
 {
-.tablink {font-family:'Times New Roman', Times, serif; padding: 5px; font-size: 10px; width: auto; margin: 1px; flex-grow: 1; }
+.tablink {font-family:'Times New Roman', Times, serif; padding: 5px; font-size: 10px; width: auto; margin: 1px; flex-grow: 1; white-space: normal; word-wrap: break-word; text-align: center;}
 .tabcontainer {top: 5px; width: 100%; display: flex; justify-content: center; position: sticky;  z-index: 999; background-color: #ffffff;}
 }
 
