--- a/knowledge.html
+++ b/knowledge.html
@@ -83,7 +83,7 @@ nav ul.menu li img {height: 25px; width: 25px;}
 
 @media (max-width: 950px) 
 {
-.tablink {font-family:'Times New Roman', Times, serif; padding: 5px; font-size: 10px; width: auto; margin: 1px; flex-grow: 1; white-space: nowrap;  box-sizing: border-box; width:25%; display: inline-block; text-align: center; }
+.tablink {font-family:'Times New Roman', Times, serif; padding: 5px; font-size: 10px; width: auto; margin: 1px; flex-grow: 1; }
 .tabcontainer {top: 5px; width: 100%; display: flex; justify-content: center; position: sticky;  z-index: 999; background-color: #ffffff;}
 }
 
