--- a/knowledge.html
+++ b/knowledge.html
@@ -407,7 +407,7 @@ table.APPS {border-spacing: 10px;}
 <br>
 <br>
 <p class="p3">
-<b>தரவு மேலாண்மை:</b> <br> நான் எக்சலை வேலையினைத் தகுந்த தரவுகளை கையாள்வதற்காக திறமையாக பயன்படுத்திய அனுபவம் கொண்டுள்ளேன்
+<b>தரவு மேலாண்மை:</b> <br> எனக்கு எக்சலை வேலையில் தகுந்த தரவுகளை கையாள்வதற்காக திறமையாக பயன்படுத்திய அனுபவம் கொண்டுள்ளேன்
 <br>
 <b>தொழில்முறை அனுபவம்:</b><br> எனது வேலைகளில் பல்வேறு தரவுசார்ந்த பணிகளை கையாள்வதில் நேரடியாக பயன்படுத்திய அனுபவம் உள்ளது
 </p>
@@ -426,7 +426,7 @@ table.APPS {border-spacing: 10px;}
 <br>
 <br>
 <p class="p3">
-<b>தரவு கையாளுதல்:</b> <br>  இந்த கணினி செயலியை வினா அடிப்படையிலான தரவுகளை கையாள்வதில் அனுபவம் பெற்றுள்ளேன்
+<b>தரவு கையாளுதல்:</b> <br>  இந்த கணினி செயலியை வினா அடிப்படையிலான தரவுகளை கையாழ்வதற்கு பயன்படுத்திய அனுபவம் பெற்றுள்ளேன்
 <br>
 <b>தொழில்முறை அனுபவம்:</b> <br> இந்த கணினி செயலியை பயன்படுத்தி என் வேலைகளில் பல்வேறு தரவுசார்ந்த பணிகளை கையாள்வதில் அனுபவம் பெற்றுள்ளேன்
 </p>
@@ -544,7 +544,7 @@ table.APPS {border-spacing: 10px;}
 <br>
 <br>
 <p class="p3">
-<b>அழகிய மற்றும் படைப்பாற்றல் மிக்க வடிவமைப்பு:</b> <br> பலவிதமான உள்ளடக்கங்களை வடிவமைப்பதற்காக இந்த செயலியை பயன்படுத்தியதில் எனக்கு திறமையான அனுபவம் உள்ளது
+<b>அழகிய மற்றும் படைப்பாற்றல் மிக்க வடிவமைப்பு:</b> <br> பலவிதமான உள்ளடக்கங்களை வடிவமைப்பதற்காக இந்த செயலியை பயன்படுத்திய அனுபவம் உள்ளது
 <br>
 <b>தொழில்முறை அனுபவம்:</b> <br>      வேலை சார்ந்த பணிகளுக்கான உள்ளடக்கங்களை வடிவமைப்பதிலும், தனிப்பட்ட தேவைகளுக்காகவும் இந்த செயலியை பயன்படுத்திய அனுபவம் பெற்றிருக்கிறேன்
 </p>
@@ -643,8 +643,6 @@ table.APPS {border-spacing: 10px;}
 <br>
 <p class="p3">
 <b>புகைப்படத் திருத்தம்:</b> <br>  என் புகைப்படங்களை மேம்படுத்த AI புகைப்படத் திருத்தத் தொழிலாகப் பயன்படுத்திய அனுபவம் உள்ளது
-<br>
-<b>தனிப்பட்ட அனுபவம்:</b> <br>  தனிப்பட்ட தேவைகளுக்காக இதைப் பயன்படுத்திய அனுபவம் உள்ளது
 </p>
 <br>
 <br>
@@ -663,7 +661,7 @@ table.APPS {border-spacing: 10px;}
 <p class="p3">
 <b>இணையதள உருவாக்கம்:</b> <br>ஸ்டாடிக் இணையதளங்களை உருவாக்க HTML மற்றும் CSS-ஐ அடிப்படையாக தெரியும்
 <br>
-<b>தனிப்பட்ட அனுபவம்:</b> <br>  உருவாக்குநர் அல்ல, ஆனால் ஸ்டாடிக் இணையதளங்களை உருவாக்க இந்த தொழில்நுட்பங்களை பயன்படுத்த தெரியும்
+<b>தனிப்பட்ட அனுபவம்:</b> <br>  நான் ஒரு டெவலப்பர் இல்லை என்றாலும், எனக்கு ஸ்டாடிக் இணையதளங்களை உருவாக்க இந்த தொழில்நுட்பங்களை பயன்படுத்த தெரியும்
 </p>
 <br>
 <br>
@@ -722,7 +720,7 @@ table.APPS {border-spacing: 10px;}
 <p class="p3">
 <b>பாக்ரவுண்ட்  திருத்தம்:</b> <br>  பாக்ரவுண்ட் திருத்துவதற்கான கருவியாகப் பயன்படுத்திய அனுபவம் உள்ளது
 <br>
-<b>தொழில்முறை அனுபவம்:</b> <br>  தனிப்பட்ட தேவைகளுக்காக இதைப் பயன்படுத்திய அனுபவம் உள்ளது
+<b>தனிப்பட்ட அனுபவம்:</b> <br>  தனிப்பட்ட தேவைகளுக்காக இதைப் பயன்படுத்திய அனுபவம் உள்ளது
 </p>
 <br>
 <br>
