--- a/knowledge.html
+++ b/knowledge.html
@@ -789,7 +789,7 @@ table.APPS {border-spacing: 10px;}
 <br><br>
 <p class="p41">
 <img class="IMAGE2" src="SKILL HUB\PLANNING AND EXECUTION.jpg" draggable="false" style="width:250px; height:250px;">
-பணிகளைத் திட்டமிடுவதற்கும் நிறைவேற்றுவதற்கும் எனது கவனமான அணுகுமுறைக்காக நான் எப்போதும் அறியப்பட்டவன். பிழைகள் அல்லது மேற்பார்வைகளுக்கு இடமளிக்காமல், எல்லாமே சரியாக ஒழுங்கமைக்கப்பட்டு சீரமைக்கப்படுவதை எனது முறையான இயல்பு உறுதி செய்கிறது.
+பணிகளை திட்டமிடுவதிலும், நிறைவேற்றுவதிலும் நான் கவனமான அணுகுமுறையை கொண்டவன் என எப்போதும் அறியப்பட்டவன். பிழைகள் அல்லது மேற்பார்வைகளுக்கு இடமளிக்காமல், அனைத்தும் சரியாக ஒழுங்கமைக்கப்பட்டு சீரமைக்கப்படுவதை எனது முறையான இயல்பு உறுதி செய்கிறது.
 </p>
 </div>
 
@@ -825,7 +825,7 @@ table.APPS {border-spacing: 10px;}
 <br><br>
 <p class="p41">
 <img class="IMAGE2" src="SKILL HUB\RIDING.jpg" draggable="false" style="width:250px; height:250px;">
-பைக் ஓட்டுவதும் சைக்கிள் ஓட்டுவதும் எனது திறமைகள் மட்டும் அல்ல; அவை எனது மிகப்பெரிய ஆசைகள். நான் ஆரம்பத்தில் சைக்கிள் மற்றும் பைக் ஓட்டக் கற்றுக்கொண்டேன், அப்போதிருந்தே, புதிய இடங்களை ஆராய்வது, எல்லைகளைக் கடப்பது மற்றும் வெவ்வேறு கலாச்சாரங்கள் மற்றும் மரபுகளை ஆராய்வதில் நான் ஈர்க்கப்பட்டேன். இந்த செயல்பாடுகள் இயற்கையின் மீதான எனது அன்பையும், பல்வேறு இடங்களைச் சேர்ந்த மக்களுடன் தொடர்பு கொள்வதையும் தூண்டியது. பைக் மற்றும் சைக்கிள் ஓட்டுவதில் நான் மிகுந்த மகிழ்ச்சியையும் நிறைவையும் காண்கிறேன், அவற்றை என் வாழ்க்கையின் ஒரு அங்கமாக ஆக்குகிறேன்.
+பைக் ஓட்டுவதும் சைக்கிள் ஓட்டுவதும் எனது திறமைகள் மட்டும் அல்ல; அவை எனது மிகப்பெரிய ஆசைகள். நான் சிறு வயதிலேயே சைக்கிள் மற்றும் பைக் ஓட்டக் கற்றுக்கொண்டேன், அப்போதிருந்தே, புதிய இடங்களை ஆராய்வது, எல்லைகளைக் கடப்பது மற்றும் வெவ்வேறு கலாச்சாரங்கள் மற்றும் மரபுகளை ஆராய்வதில் நான் ஈர்க்கப்பட்டேன். இந்த செயல்பாடுகள் இயற்கையின் மீதான எனது அன்பையும், பல்வேறு இடங்களைச் சேர்ந்த மக்களுடன் தொடர்பு கொள்வதையும் தூண்டியது. பைக் மற்றும் சைக்கிள் ஓட்டுவதில் நான் மிகுந்த மகிழ்ச்சியையும் நிறைவையும் காண்கிறேன், அவற்றை என் வாழ்க்கையின் ஒரு அங்கமாக ஆக்குகிறேன்.
 </p>
 </div>
 
@@ -859,7 +859,7 @@ table.APPS {border-spacing: 10px;}
 <br><br>
 <p class="p41">
 <img class="IMAGE1" src="SKILL HUB\DESIGNING.jpg" draggable="false" style="width:250px; height:250px;">
-நான் சிறுவயதில் இருந்தே பொருட்களை வடிவமைக்க விரும்பினேன், அந்த உற்சாகம் இன்றும் என்னுள் இருக்கிறது. நான் லோகோக்கள், ரெஸ்யூம்கள் அல்லது கார்டுகள் என எதுவாக இருந்தாலும், நான் அதை எப்போதும் ரசித்துக் செய்வேன்; இதில் எத்தனை நேரம் செலவிட்டாலும் அது சலிப்படையாது. அது வேலைக்காகவோ அல்லது வேடிக்கைக்காகவோ எதுவாக இருந்தாலும், எனது படைப்பாற்றலை எனது யோசனைகளை அழகான வடிவமைப்புகளாக மாற்றுவதில் நான் மகிழ்ச்சி அடைகிறேன்.
+நான் சிறுவயதில் இருந்தே பொருட்களை வடிவமைக்க விரும்பினேன், அந்த உற்சாகம் இன்றும் என்னுள் இருக்கிறது. நான் லோகோக்கள், ரெஸ்யூம்கள் அல்லது கார்டுகள் என எதுவாக இருந்தாலும், நான் அதை எப்போதும் ரசித்து உருவாக்குவேன்; இதில் எத்தனை நேரம் செலவிட்டாலும் அது சலிப்படையாது. அது வேலைக்காகவோ அல்லது வேடிக்கைக்காகவோ எதுவாக இருந்தாலும், எனது படைப்பாற்றலை கொண்டு எனது யோசனைகளை அழகான வடிவமைப்புகளாக மாற்றுவதில் நான் மகிழ்ச்சி அடைகிறேன்.
 </p>
 </div>
 
@@ -931,11 +931,11 @@ table.APPS {border-spacing: 10px;}
 
 <div class="SKILL">
 
-<h class="h41"><b>இணைய &nbsp;வடிவமைப்பு</b></h>
+<h class="h41"><b>வலைத்தல &nbsp;வடிவமைப்பு</b></h>
 <br><br>
 <p class="p41">
 <img class="IMAGE1" src="SKILL HUB\WEBDESIGNING.jpg" draggable="false" style="width:250px; height:250px;">
-நான் டெவலப்பர் இல்லாவிட்டாலும், எனக்கு HTML மற்றும் CSS அடிப்படைகள் தெரியும் மற்றும் JavaScriptக்கு AI ஐப் பயன்படுத்துகிறேன், இது ஸ்டாட்டிக் வலைத்தளங்களை உருவாக்க என்னை அனுமதிக்கிறது. எங்கள் நிறுவனத்தின் இணையதளத்தை என் தந்தை அறிமுகப்படுத்தியதன் மூலம் ஈர்க்கப்பட்டு, வலை வடிவமைப்பில் எனது ஆர்வம் குழந்தைப்பருவத்திலிருந்தே தொடங்கியது. ஸ்டாட்டிக் வலைத்தளங்களை வடிவமைப்பது எனக்கு மிகவும் பிடித்த திறமைகளில் ஒன்றாகும், ஏனெனில் இது என்னை ஆக்கப்பூர்வமாகவும் அலங்காரமாகவும் சிந்திக்கவைக்கிறது. நீங்கள் பார்க்கும் விஷ்ணுபீடியா எனது சொந்த படைப்புகளில் ஒன்று. இது எனது ஈர்க்கக்கூடிய வடிவமைப்புகளை உருவாக்கும் திறமையை வெளிப்படுத்துகிறது. யோசனைகளை நன்கு வடிவமைக்கப்பட்ட வலைப்பக்கங்களாக மாற்றும் செயல்முறையை நான் மிகவும் ரசிக்கிறேன். 
+நான் டெவலப்பராக இல்லாவிட்டாலும், எனக்கு HTML மற்றும் CSS அடிப்படைகள் தெரியும் மற்றும் JavaScriptக்கு AI ஐப் பயன்படுத்துகிறேன், இது ஸ்டாட்டிக் வலைத்தளங்களை உருவாக்க என்னை அனுமதிக்கிறது. எங்கள் நிறுவனத்தின் இணையதளத்தை என் தந்தை அறிமுகப்படுத்தியதன் மூலம் ஈர்க்கப்பட்டு, வலைத்தல வடிவமைப்பில் எனது ஆர்வம் குழந்தைப்பருவத்திலிருந்தே தொடங்கியது. ஸ்டாட்டிக் வலைத்தளங்களை வடிவமைப்பது எனக்கு மிகவும் பிடித்த திறமைகளில் ஒன்றாகும், ஏனெனில் இது என்னை ஆக்கப்பூர்வமாகவும் அலங்காரமாகவும் சிந்திக்கவைக்கிறது. நீங்கள் பார்க்கும் விஷ்ணுபீடியா எனது சொந்த படைப்புகளில் ஒன்று. இது எனது ஈர்க்கக்கூடிய வடிவமைப்புகளை உருவாக்கும் திறமையை வெளிப்படுத்துகிறது. யோசனைகளை நன்கு வடிவமைக்கப்பட்ட வலைப்பக்கங்களாக மாற்றும் செயல்முறையை நான் மிகவும் ரசிக்கிறேன். 
 </p>
 </div>
 
@@ -956,9 +956,9 @@ table.APPS {border-spacing: 10px;}
 <p class="p41">
 <img class="IMAGE2" src="SKILL HUB\DATAANALYSIS.jpg" draggable="false" style="width:350px; height:350px;">
 மிகப்பெரிய தரவுகளை கையாள்வதற்கு எனக்கு குழந்தை பருவத்திலிருந்தே ஈர்ப்பு உண்டு, அப்போது நான் என் தந்தை எளிதில் எங்கள் நிறுவனத்தின் தரவுகளை நிர்வகித்து, முக்கியமான வணிக சுருக்கங்களை உருவாக்குவதைப் பார்த்தேன். சிக்கலான தரவுகளை எளிமையாக்கும் அவரது திறன் என்னை ஈர்த்தது, மேலும் இந்த திறமையை நான் பாராட்டி வளர்ந்தேன்.  
-நான் எனது தொழில்முறை பயணத்தில் இறங்கும்போது, பலதரப்பட்ட தரவுத் தொகுப்புகளைக் கையாள பல்வேறு வாய்ப்புகளை நான் சந்தித்தேன், பெரும்பாலும் பெரிய அளவில். இந்த அனுபவங்கள், குறிப்பாக எக்செல், வேர்ட் மற்றும் டிஎக்ஸ்டி போன்ற வடிவங்களில் தரவுகளுடன் பணிபுரிவதற்கான எனது உற்சாகத்தைத் தூண்டியது. ஒரு அர்த்தமுள்ள மற்றும் ஈடுபாட்டுடன் தரவை ஒழுங்கமைத்தல், பகுப்பாய்வு செய்து வழங்குதல் ஆகியவற்றின் சவாலில் நான் செழித்தேன். 
+நான் எனது தொழில்முறை பயணத்தில் இறங்கும்போது, பலதரப்பட்ட தரவுத் தொகுப்புகளைக் கையாளவேண்டிய பல்வேறு வாய்ப்புகளை நான் சந்தித்தேன், பெரும்பாலும் பெரிய அளவில். இந்த அனுபவங்கள், குறிப்பாக எக்செல், வேர்ட் மற்றும் டிஎக்ஸ்டி போன்ற வடிவங்களில் தரவுகளுடன் பணிபுரிவதற்கான எனது உற்சாகத்தைத் தூண்டியது. ஒரு அர்த்தமுள்ள வகையிலும் மற்றும் ஈடுபாட்டுடன் தரவை ஒழுங்கமைத்தல், பகுப்பாய்வு செய்து வழங்குதல் ஆகியவற்றின் சவாலில் நான் செழித்தேன். 
 <br>    
-பெரிய தரவுகளை கையாள்வதில் சிரமப்படும் மற்றவர்களுக்கு உதவுவதுதான் என்னை மிகவும் உற்சாகப்படுத்துகிறது. சிக்கலான தரவுத் தொகுப்புகள் வழியாகச் செல்ல ஒருவருக்கு உதவுவது மற்றும் அவர்களின் நிவாரணம் மற்றும் புதிய நம்பிக்கையைக் காண்பது போன்ற திருப்தி உண்மையிலேயே விலைமதிப்பற்றது. தரவுகள் தொடர்ந்து பரிணாம வளர்ச்சி பெறுவதால், இந்தத் துறையில் தொடர்ச்சியான கற்றல் முக்கியமானது என்று நான் நம்புகிறேன். இது பல்வேறு தரவு சவால்களை எதிர்கொள்வதில் நான் திறமையானவனாக இருப்பதை உறுதிசெய்து, பெரிய தரவைக் கையாள்வதற்கும் விளக்குவதற்கும் புதுமையான வழிகளை ஆராய இந்த மனநிலை என்னைத் தூண்டுகிறது.
+பெரிய தரவுகளை கையாள்வதில் சிரமப்படும் மற்றவர்களுக்கு உதவுவதுதான் என்னை மிகவும் உற்சாகப்படுத்துகிறது. சிக்கலான தரவுத் தொகுப்புகளைக் கையாளுவதற்கு ஒருவருக்கு உதவுவது மற்றும் அவர்களின் நிவாரணம் மற்றும் புதிய நம்பிக்கையைக் காண்பது போன்ற திருப்தி உண்மையிலேயே விலைமதிப்பற்றது. தரவுகள் தொடர்ந்து பரிணாம வளர்ச்சி பெறுவதால், இந்தத் துறையில் தொடர்ச்சியான கற்றல் முக்கியமானது என்று நான் நம்புகிறேன். இது பல்வேறு தரவு சவால்களை எதிர்கொள்வதில் நான் திறமையானவனாக இருப்பதை உறுதிசெய்து, பெரிய தரவைக் கையாள்வதற்கும் விளக்குவதற்கும் புதுமையான வழிகளை ஆராய இந்த மனநிலை என்னைத் தூண்டுகிறது.
 </p>
 </div>
 
@@ -971,7 +971,7 @@ table.APPS {border-spacing: 10px;}
 <br><br>
 <p class="p41">
 <img class="IMAGE2" src="SKILL HUB\E-SORTING.jpg" draggable="false" style="width:350px; height:350px;">
-எனது தொழில்முறை அனுபவத்தில் திருப்திகரமாகவும் மதிப்புமிக்கதாகவும் நான் கருதும் பணிகளில் ஒன்று கடினமான நகல் தரவை ஒழுங்கமைக்கப்பட்ட மின்னணு வடிவங்களாக மாற்றுவதாகும். இந்த செயல்முறையானது தரவுகளை அணுகக்கூடியதாகவும் பல்வேறு நோக்கங்களுக்காகப் பயன்படுத்தக்கூடியதாகவும் மாற்றுவதற்கு முறையாக வரிசைப்படுத்துதல் மற்றும் ஒழுங்கமைத்தல் ஆகியவை அடங்கும். மற்ற செயல்பாடுகளுடன் ஒப்பிடும்போது இந்தப் பணி எப்போதுமே மிகவும் பரபரப்பானதாக இருக்காது என்றாலும், தரவை ஒரு கட்டமைக்கப்பட்ட மற்றும் திறமையான வடிவமாக மாற்றுவதில் ஒரு குறிப்பிட்ட சாதனை உணர்வு உள்ளது. வெவ்வேறு தகவல்களை எடுத்து எளிதாக அணுகுவதற்கும் மீட்டெடுப்பதற்கும் வசதியாக அவற்றை ஒழுங்கமைக்கும் திறன் சவாலானது.
+எனது தொழில்முறை அனுபவத்தில் திருப்திகரமாகவும் மதிப்புமிக்கதாகவும் நான் கருதும் பணிகளில் ஒன்று தாள்நகல் தரவை ஒழுங்கமைக்கப்பட்ட மின்னணு வடிவங்களாக மாற்றுவதாகும். இந்த செயல்முறையானது தரவுகளை அணுகக்கூடியதாகவும் பல்வேறு நோக்கங்களுக்காகப் பயன்படுத்தக்கூடியதாகவும் மாற்றுவதற்கு முறையாக வரிசைப்படுத்துதல் மற்றும் ஒழுங்கமைத்தல் ஆகியவை அடங்கும். மற்ற செயல்பாடுகளுடன் ஒப்பிடும்போது இந்தப் பணி எப்போதுமே மிகவும் பரபரப்பானதாக இருக்காது என்றாலும், தரவை ஒரு கட்டமைக்கப்பட்ட மற்றும் திறமையான வடிவமாக மாற்றுவதில் ஒரு குறிப்பிட்ட சாதனை உணர்வு உள்ளது. வெவ்வேறு தகவல்களை எடுத்து எளிதாக அணுகுவதற்கும் மீட்டெடுப்பதற்கும் வசதியாக அவற்றை ஒழுங்கமைக்கும் திறன் சவாலானது.
 <br>    
 மின்னணு தரவு மற்றும் ஆவண வரிசையாக்கத்தில் வெற்றிக்கான திறவுகோல் என்னவென்றால் விவரம் மற்றும் தர்க்கரீதியான அணுகுமுறை ஆகியவையாகும். தரவுகள்  துல்லியமாக வகைப்படுத்தப்பட்டு, லேபிளிடப்பட்டு, சேமிக்கப்படுவதை உறுதி செய்வதன் மூலம் நாம் வருங்காலத்தில் ஆவணங்களை எளிதில் ஆராய்ந்து முடிவெடுக்க கூடிய அணுகு முறையை உருவாக்கலாம்.
 </p>
@@ -1009,7 +1009,7 @@ table.APPS {border-spacing: 10px;}
 <img class="IMAGE1" src="SKILL HUB\TEACHING.jpg" draggable="false" style="width:350px; height:350px;">
 எனது கற்பித்தலுக்கான ஆர்வம், சிறந்த ஆசிரியரான என் தந்தையின் கற்பித்தல் முறையைப் பார்த்ததிலிருந்து ஆரம்பித்தது. வளரும்போது, பள்ளியில் பாரம்பரிய கற்பித்தல் முறைகள் ஊக்கமளிக்காததாகவும் சலிப்பை ஏற்படுத்துவதாகவும் இருப்பதைக் கண்டேன். இருப்பினும், என் தந்தையின் புதுமையான மற்றும் ஈர்க்க கூடிய கற்பித்தல் முறைகள் எனக்கு வேடிக்கையாகவும் புரிந்துகொள்ளவும் எளிதாக இருந்தது.     
 <br>
-அவருடைய வழிமுறைகளால் ஈர்க்கப்பட்டு, எனக்கு தெளிவும் புரிதலும் உள்ள பகுதிகளில் மற்றவர்களுக்குக் கற்பிப்பதில் ஆர்வம் ஏற்பட்டது. என் தந்தை எனக்குச் செய்ததைப் போலவே, கற்றலை சுவாரஸ்யமானதாகவும் அணுகக்கூடியதாகவும் மாற்ற நான் விரும்புகிறேன். சிக்கலான கருத்துகளை எளிமையான, தொடர்புடைய சொற்களாக உடைக்க நான் முயற்சி செய்கிறேன், மேலும் புரிந்து கொள்ள சிரமப்படுபவர்களை ஈடுபடுத்த ஆக்கப்பூர்வமான நுட்பங்களைப் பயன்படுத்துகிறேன். கற்பித்தல் என்பது அறிவை வழங்குவது மட்டுமல்ல; அது ஆர்வத்தைத் தூண்டுவதாகவும், கற்றலுக்கான அன்பை வளர்ப்பதாகவும், மற்றும் மற்றவர்களின் முழு திறனை அடைய அவர்களுக்கு உதவுவதாகவும் இருக்க வேண்டும். இதனை நான் கற்பிக்கும் முறையில் கொண்டு வர ஆசைப்படுகிறேன்.
+அவருடைய வழிமுறைகளால் ஈர்க்கப்பட்டு, எனக்கு தெளிவும் புரிதலும் உள்ள பாட பகுதிகளை மற்றவர்களுக்குக் கற்பிப்பதில் ஆர்வம் ஏற்பட்டது. என் தந்தை எனக்குச் செய்ததைப் போலவே, கற்றலை சுவாரஸ்யமானதாகவும் அணுகக்கூடியதாகவும் மாற்ற நான் விரும்புகிறேன். சிக்கலான கருத்துகளை எளிமையான, தொடர்புடைய சொற்களாக உடைக்க நான் முயற்சி செய்கிறேன், மேலும் புரிந்து கொள்ள சிரமப்படுபவர்களை ஈடுபடுத்த ஆக்கப்பூர்வமான நுட்பங்களைப் பயன்படுத்துகிறேன். கற்பித்தல் என்பது அறிவை வழங்குவது மட்டுமல்ல; அது ஆர்வத்தைத் தூண்டுவதாகவும், கற்றலுக்கான அன்பை வளர்ப்பதாகவும், மற்றும் மற்றவர்களின் முழு திறனை அடைய அவர்களுக்கு உதவுவதாகவும் இருக்க வேண்டும். இதனை நான் கற்பிக்கும் முறையில் கொண்டு வர ஆசைப்படுகிறேன்.
 </p>
 </div>
 
@@ -1059,7 +1059,7 @@ table.APPS {border-spacing: 10px;}
 <img class="IMAGE2" src="SKILL HUB\BUSINESSANDCOMPETITORANALYSIS.jpg" draggable="false" style="width:350px; height:350px;">
 எனது வேலைகளில் ஒன்றின் போது வணிக பகுப்பாய்வு மற்றும் போட்டியாளர் பகுப்பாய்வு கலையை நான் கற்றுக்கொண்டேன். சிக்கலான கருத்துக்களைப் புரிந்துகொள்வது சில சமயங்களில் சவாலானதாக இருந்தாலும், இந்த செயல்முறையை ஆராய்வது ஒரு அற்புதமான பயணம்.
 <br>
-போட்டியாளர்களை பகுப்பாய்வு செய்தல் மற்றும் நமது சொந்த பலத்தை புரிந்துகொள்வது, நம்மை வேறுபடுத்திக் காட்டுவது மற்றும் புதிய உயரங்களை எட்டுவதற்கான முன்னேற்றத்திற்கான பகுதிகளை அடையாளம் காண்பது அனைத்தும் இந்த வேலையின் உற்சாகமான அம்சங்களாகும். தகவலறிந்த முடிவுகளை எடுப்பதற்கும் உத்திகளை திறம்பட செயல்படுத்துவதற்கும் தரவு, போக்குகள் மற்றும் சந்தை இயக்கவியல் ஆகியவற்றை ஆழமாக ஆராய்வதே இந்த செயல்முறையின் தன்மை.
+போட்டியாளர்களை பகுப்பாய்வு செய்தல் மற்றும் நமது சொந்த பலத்தை புரிந்துகொள்வது, நம்மை வேறுபடுத்திக் காட்டுவது மற்றும் புதிய உயரங்களை எட்டுவதற்கான முன்னேற்றத்திற்கான பகுதிகளை அடையாளம் காண்பது அனைத்தும் இந்த வேலையின் உற்சாகமான அம்சங்களாகும். தகவலறிந்த முடிவுகளை எடுப்பதற்கும் யுக்திகளை திறம்பட செயல்படுத்துவதற்கும் தரவு, போக்குகள் மற்றும் சந்தை இயக்கவியல் ஆகியவற்றை ஆழமாக ஆராய்வதே இந்த செயல்முறையின் தன்மை.
 </p>
 </div>
 
@@ -1072,9 +1072,9 @@ table.APPS {border-spacing: 10px;}
 <br><br>
 <p class="p41">
 <img class="IMAGE2" src="SKILL HUB\LEADGENERATION.jpg" draggable="false" style="width:350px; height:350px;">
-பொருத்தமான வாடிக்கையாளர்களை அடையாளம் காணும் செயல்முறையை எனது முந்தைய வேலைகளில் ஒன்றின் போது நான் பெற்ற திறமையாகும், இதில் எங்கள் நிறுவனத்தின் தயாரிப்புகள் மற்றும் சேவைகளுக்கான சாத்தியமான வாடிக்கையாளர்களைக் கண்டறிந்து சேகரிப்பதே இலக்காக இருந்தது. வாடிக்கையாளர்களின் கணிசமான தரவுத்தளத்தை உருவாக்க, இணையதளங்கள் மற்றும் லிங்க்ட்இன் போன்ற தளங்களைப் பயன்படுத்தி இணையத்தில் தேடுவது இந்த செயல்முறையின் தன்மை.
+பொருத்தமான வாடிக்கையாளர்களை அடையாளம் காணும் செயல்முறையை எனது முந்தைய வேலைகளில் ஒன்றின் போது நான் பெற்ற திறமையாகும், இதில் எங்கள் நிறுவனத்தின் தயாரிப்புகள் மற்றும் சேவைகளுக்கான சாத்தியமான வாடிக்கையாளர்களைக் கண்டறிந்து அவர்களின் தகவல்களை சேகரிப்பதே இலக்காக இருந்தது. வாடிக்கையாளர்களின் கணிசமான தரவுத்தளத்தை உருவாக்க, இணையதளங்கள் மற்றும் லிங்க்ட்இன் போன்ற தளங்களைப் பயன்படுத்தி இணையத்தில் தேடுவது இந்த செயல்முறையின் தன்மை.
 <br>
-எங்களிடம் ஒரு விரிவான பட்டியல் கிடைத்ததும், இந்த வாடிக்கையாளர்களை உண்மையான வாடிக்கையாளர்களாக மாற்றுவதை இலக்காகக் கொண்டு மின்னஞ்சல் பிரச்சாரங்களை அனுப்புவோம். இது மூலோபாய சிந்தனை, தரவு பகுப்பாய்வு மற்றும் பயனுள்ள தகவல்தொடர்புகளை வளர்ப்பதற்கும் மதிப்புமிக்க வணிக வாய்ப்புகளாக மாற்றுவதற்கும் தேவைப்படும் ஒரு செயல்முறையாகும்.  
+எங்களிடம் ஒரு விரிவான பட்டியல் கிடைத்ததும், இந்த நபர்களை உண்மையான வாடிக்கையாளர்களாக மாற்றுவதை இலக்காகக் கொண்டு மின்னஞ்சல் பிரச்சாரங்களை அனுப்புவோம். இது மூலோபாய சிந்தனை, தரவு பகுப்பாய்வு மற்றும் பயனுள்ள தகவல்தொடர்புகளை வளர்ப்பதற்கும் மதிப்புமிக்க வணிக வாய்ப்புகளாக மாற்றுவதற்கும் தேவைப்படும் ஒரு செயல்முறையாகும்.  
 </p>
 </div>
 
