--- a/career.html
+++ b/career.html
@@ -408,7 +408,7 @@ table.FULL {border-spacing: 10px;}
 <br>
 <br>
 <p class="p1">
-  எங்கள் கருவிகளின் முழுமையான தரப் பகுப்பாய்வை நான் மேற்கொண்டேன், அவற்றை தொழில்நுட்பக் கண்ணோட்டம் மற்றும் இறுதிப் பயனர் பார்வையில் மதிப்பீடு செய்தேன். நான் குறைபாடுகளை கண்டறிந்து ஆவணப்படுத்தினேன், தீர்வுக்கான டிக்கெட்டுகளை ஒதுக்கினேன் மற்றும் ஒட்டுமொத்த பயனர் அனுபவத்தை மேம்படுத்தவும் தயாரிப்பு தரத்தை உறுதிப்படுத்தவும் மாற்ற கோரிக்கைகளை சமர்ப்பித்தேன்
+  எங்கள் கருவிகளின் முழுமையான தரப் பகுப்பாய்வை நான் மேற்கொண்டேன், அவற்றை தொழில்நுட்பக் கண்ணோட்டம் மற்றும் இறுதிப் பயனர் பார்வையில் மதிப்பீடு செய்தேன். நான் குறைபாடுகளை கண்டறிந்து ஆவணப்படுத்தினேன், தீர்வுக்கான டிக்கெட்டுகளை ஒதுக்கினேன் மற்றும் ஒட்டுமொத்த பயனர் அனுபவத்தை மேம்படுத்தவும் தயாரிப்பு தரத்தை உறுதிப்படுத்தவும் மாற்று கோரிக்கைகளை சமர்ப்பித்தேன்
 </p>
 <br>
 </center>
