--- a/career.html
+++ b/career.html
@@ -872,7 +872,7 @@ table.FULL {border-spacing: 10px;}
 <td class="A2">
 <center>
 <br>
-<img src="TAMILLOGOS\ELECTRICALSWITCHASSEMBLER.jpg" draggable="false" width="200px" height="200px"><br><br>
+<img src="TAMILLOGOS\ELECTRICALSWITCHASSEMBLER.png" draggable="false" width="200px" height="200px"><br><br>
 <h class="h21"> மின் &nbsp;சுவிட்ச் &nbsp;அசெம்பிளர்  </h><br>
 <br>
 <br>
@@ -887,7 +887,7 @@ table.FULL {border-spacing: 10px;}
 <td class="A2">
 <center>
 <br>
-<img src="TAMILLOGOS\TUTOR.jpg" draggable="false" width="200px" height="200px"><br><br>
+<img src="TAMILLOGOS\TUTOR.png" draggable="false" width="200px" height="200px"><br><br>
 <h class="h21"> பயிற்சி &nbsp;ஆசிரியர் </h><br>
 <br>
 <br>
@@ -905,7 +905,7 @@ table.FULL {border-spacing: 10px;}
 <td class="A2">
 <center>
 <br>
-<img src="TAMILLOGOS\FOOD DELIVERY MAN.jpg" draggable="false" width="200px" height="200px"><br><br>
+<img src="TAMILLOGOS\FOOD DELIVERY MAN.png" draggable="false" width="200px" height="200px"><br><br>
 <h class="h21"> உணவு &nbsp;விநியோக &nbsp;ஊழியர்  </h><br>
 <br>
 <br>
@@ -920,7 +920,7 @@ table.FULL {border-spacing: 10px;}
 <td class="A2">
 <center>
 <br>
-<img src="TAMILLOGOS\BUILDING CONSTRUCTION SUPERVISOR.jpg" draggable="false" width="200px" height="200px"><br><br>
+<img src="TAMILLOGOS\BUILDING CONSTRUCTION SUPERVISOR.png" draggable="false" width="200px" height="200px"><br><br>
 <h class="h21"> கட்டிட &nbsp;மேற்பார்வையாளர்  </h><br>
 <br>
 <br>
